--- a/DirigivelEmMarte/DirigivelEmMarte/DirigivelEmMarte.csproj
+++ b/DirigivelEmMarte/DirigivelEmMarte/DirigivelEmMarte.csproj
@@ -52,8 +52,15 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IStack.cs" />
+    <Compile Include="ListaSimplesP.cs" />
+    <Compile Include="NoListaP.cs" />
+    <Compile Include="PilhaLista.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
