--- a/DirigivelEmMarte/DirigivelEmMarte/DirigivelEmMarte.csproj
+++ b/DirigivelEmMarte/DirigivelEmMarte/DirigivelEmMarte.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ListaSimples.cs" />
     <Compile Include="NoLista.cs" />
     <Compile Include="PilhaLista.cs" />
+    <Compile Include="PilhaVaziaException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
